--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,16 @@
         android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/colorBackground"
         android:foregroundGravity="center_horizontal"
+        android:onClick="goPlay"
         android:padding="0dp"
         android:scaleType="fitXY"
         android:src="@drawable/play_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/dicesImageView" />
 
     <ImageButton
         android:id="@+id/registerButton"
@@ -30,6 +29,7 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorBackground"
         android:foregroundGravity="center_horizontal"
+        android:onClick="goRegister"
         android:padding="0dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,11 +41,10 @@
         android:id="@+id/rankingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/colorBackground"
         android:foregroundGravity="center_horizontal"
+        android:onClick="goRanking"
         android:padding="0dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +53,7 @@
         app:srcCompat="@drawable/ranking_button" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/dicesImageView"
         android:layout_width="312dp"
         android:layout_height="196dp"
         android:layout_marginTop="32dp"
@@ -62,4 +61,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dices_png" />
+
+    <ImageButton
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/colorBackground"
+        android:foregroundGravity="center_horizontal"
+        android:onClick="resetAll"
+        android:padding="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rankingButton"
+        app:srcCompat="@drawable/reset_button" />
 </android.support.constraint.ConstraintLayout>
