--- a/app/src/main/res/layout/activity_view_ranking.xml
+++ b/app/src/main/res/layout/activity_view_ranking.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    tools:context=".view.ViewRankingActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="337dp"
+        android:id="@+id/textView_Ranking"
+        android:layout_width="329dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:foregroundGravity="center_vertical|center_horizontal"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:padding="0dp"
-        android:text="@string/about_text"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/text_Ranking"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
