--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#f2da22</color>
     <color name="colorBackground">#e3f16b</color>
+    <color name="userBack">#B2B4AF</color>
+    <color name="allBlack">#000000</color>
 </resources>
