Gameplay completely working. Added features: Welcome header, text with results in each game, fixed Lost games counter, dice number images setted.

--- a/app/src/main/res/layout/username_list.xml
+++ b/app/src/main/res/layout/username_list.xml
@@ -1,70 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    >
+    android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/allBlack" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/userBack"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         android:orientation="horizontal"
-        android:weightSum="4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/imageUserAvatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="left"
-
             android:scaleType="fitXY"
             tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoSizeMaxTextSize="34sp"
-                android:autoSizeMinTextSize="12sp"
+                android:layout_gravity="center"
                 android:autoSizeTextType="uniform"
                 android:text="@string/example_Username"
-                android:textAppearance="@android:style/TextAppearance.Holo.Large" />
+                android:textAlignment="center"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large"
+                android:textSize="24sp"
+                app:autoSizeTextType="uniform" />
 
             <TextView
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autoSizeMaxTextSize="20sp"
-                android:autoSizeMinTextSize="12sp"
+                android:layout_gravity="bottom|center_horizontal"
                 android:autoSizeTextType="uniform"
                 android:backgroundTint="@color/colorAccent"
-                android:text="@string/example_Description" />
+                android:text="@string/example_Description"
+                android:textAlignment="center"
+                android:textAppearance="@android:style/TextAppearance.Holo.Large"
+                app:autoSizeTextType="uniform" />
 
         </LinearLayout>
 
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/allBlack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
 </LinearLayout>
