--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,17 +63,17 @@
         app:srcCompat="@drawable/dices_png" />
 
     <ImageButton
-        android:id="@+id/resetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/exitButton"
+        android:layout_width="100dp"
+        android:layout_height="47dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/colorBackground"
         android:foregroundGravity="center_horizontal"
-        android:onClick="resetAll"
+        android:onClick="exitApp"
         android:padding="0dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rankingButton"
-        app:srcCompat="@drawable/reset_button" />
+        app:srcCompat="@drawable/exit_button" />
 </android.support.constraint.ConstraintLayout>
