--- a/app/src/main/res/layout/activity_view_score.xml
+++ b/app/src/main/res/layout/activity_view_score.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".view.ViewRankingActivity">
+    tools:context=".view.ViewScoreActivity">
 
     <TextView
         android:id="@+id/textView_Ranking"
@@ -15,11 +15,28 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
-        android:text="@string/text_Ranking"
-        android:textSize="24sp"
+        android:text="@string/text_GameList"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_GamesList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Ranking"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
